Velcro test First SandBox/src/objects/SFDC_Strategy__c.object
<CustomObject>
    <description>Specific set of strategies tied to each account that the sales manager needs to executive.  Each strategy lists specific revenue goals and products to be sold to a particular division or department.  Tasks and milestones are also attached to each strategy.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Strategy__r.AccountPlan__r.Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Plan_Name__c</fullName>
        <formula>Strategy__r.AccountPlan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Problem_Addressed__c</fullName>
        <label>Business Problem Addressed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Critical_Business_Issue_del__c</fullName>
        <formula>Strategy__r.AccountPlan__r.Critical_Business_Issues__c</formula>
        <inlineHelpText>Business Issue first identified in the Account Plan</inlineHelpText>
        <label>Critical Business Issue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Comp_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Product_Revenue__c</fullName>
        <label>Estimated Product Revenue</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Service_Revenue__c</fullName>
        <label>Estimated Service Revenue</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Revenue__c</fullName>
        <formula>Estimated_Product_Revenue__c  +  Estimated_Service_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N60000001PRP6EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <referenceTo>Strategy__c</referenceTo>
        <relationshipLabel>Tactics</relationshipLabel>
        <relationshipName>Tactics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tactic_Goal__c</fullName>
        <label>Tactic Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tactic_Status__c</fullName>
        <label>Tactic Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed-Successfull</fullName>
                </value>
                <value>
                    <fullName>Completed - Partial Success</fullName>
                </value>
                <value>
                    <fullName>Completed - Lost</fullName>
                </value>
                <value>
                    <fullName>Cancelled-Not Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tactics</label>
    <nameField>
        <label>Tactic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tactics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>